--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
     <div class="hero sight">
       <h2 id="title-1">Welcome to<em><span>S</span>ANKALP</em>The Social Club of LNMIIT</h2>
       <div class="main-social">
-        <div class="social-btn-container"> <span class="social-btn-box"> <a href="" class="facebook-btn"><i class="fa fa-facebook"></i></a> </span><!-- /.social-btn-box --> 
-          <span class="social-btn-box"> <a href="" class="insta-btn"><i class="fa-brands fa-instagram"></i></a> </span><!-- /.social-btn-box --> 
-          <span class="social-btn-box"> <a href="" class="linkedin-btn"><i class="fa fa-linkedin"></i></a> </span><!-- /.social-btn-box -->
+        <div class="social-btn-container"> <span class="social-btn-box"> <a href="https://www.facebook.com/sankalp.lnmiit" target="_blank" class="facebook-btn"><i class="fa fa-facebook"></i></a> </span><!-- /.social-btn-box --> 
+          <span class="social-btn-box"> <a href="https://www.instagram.com/sankalp.lnmiit/" target="_blank" class="insta-btn"><i class="fa-brands fa-instagram"></i></a> </span><!-- /.social-btn-box --> 
+          <span class="social-btn-box"> <a href="https://www.linkedin.com/company/sankalp-club-lnmiit/" target="_blank" class="linkedin-btn"><i class="fa fa-linkedin"></i></a> </span><!-- /.social-btn-box -->
       </div> 
         
       </div>
@@ -213,7 +213,7 @@
             <!-- END colw_4 -->
             <div class="colw_10 padd5555 alomdebe">
               <h5 class="title0">SLUM VISIT</h5>
-              <p>Visiting a slum creates awareness of the living conditions and challenges faced by marginalized communities. It can also inspire individuals and groups to take action towards improving the lives of the residents.</p>
+              <p>Visiting a slum creates awareness of the living conditions and challenges faced by marginalized communities. It can also inspire individuals and groups to take action towards improving their lives.</p>
             </div>
             <!-- END col_10 --> 
           </div>
@@ -320,7 +320,7 @@
     </div>
     <div class="row sub-footer">
       <div class="col-md-12 text-center">
-        <p>Designed by <a href="#" target="_blank">@Swaraj,Aditya,Harshit</a> </p>
+        <p>Designed by <a href="credits.html" target="_blank">@Swaraj,Aditya,Harshit</a> </p>
       </div>
     </div>
   </div>
