--- a/credits.html
+++ b/credits.html
@@ -157,7 +157,7 @@
         <div class="col_4 beta font90 column2 wow fadeInUpBig" data-wow-duration="1s" data-wow-delay=".6s">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="sankalpimg/Chapprinigga.jpg">
+              <img class="img-fluid" src="sankalpimg/Swaraj.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Swaraj Layek</h3>
@@ -178,7 +178,7 @@
         <div class="col_4 beta font90 column2 wow fadeInUpBig" data-wow-duration="1s" data-wow-delay=".6s">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="sankalpimg/LordAditya.jpg">
+              <img class="img-fluid" src="sankalpimg/Aditya.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Aditya Kumar</h3>
@@ -198,7 +198,7 @@
         <div class="col_4 beta font90 column2 wow fadeInUpBig" data-wow-duration="1s" data-wow-delay=".6s">
           <div class="our-team">
             <div class="picture">
-              <img class="img-fluid" src="sankalpimg/Invincible.jpg">
+              <img class="img-fluid" src="sankalpimg/Harshit.jpg">
             </div>
             <div class="team-content">
               <h3 class="name">Harshit Daga</h3>
