--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     
       
     </header>
-    <div class="hero sight">
-      <h2 id="title-1">Welcome to<em><span>S</span>ANKALP</em>The Social Club of LNMIIT</h2>
+    <div class="hero">
+      <h2 id="title-1">Welcome to<em><span class="sight">S</span>ANKALP</em>The Social Club of LNMIIT</h2>
       <div class="main-social">
         <div class="social-btn-container"> <span class="social-btn-box"> <a href="https://www.facebook.com/sankalp.lnmiit" target="_blank" class="facebook-btn"><i class="fa fa-facebook"></i></a> </span><!-- /.social-btn-box --> 
           <span class="social-btn-box"> <a href="https://www.instagram.com/sankalp.lnmiit/" target="_blank" class="insta-btn"><i class="fa-brands fa-instagram"></i></a> </span><!-- /.social-btn-box --> 
