--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
 <link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="96x96">
 <link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="16x16">
 
-<link rel="stylesheet" href="css/animsition.min.css">
+
 <link rel="stylesheet" type="text/css" href="css/grid.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/menu.css" />
@@ -56,7 +56,7 @@
       
     </header>
     <div class="grid flex16 sight">
-      <div class="row">
+      <div class="row s2">
         <div class="colw_6">
           <h1 id="title-sub1">SANKALP</h1>
           <h2 id="title-sub2">GALLERY</h2>
@@ -78,7 +78,7 @@
   </section>
   <!-- END #section-2 -->
 
-  
+  <div><h3 class="moving-text mtc">◉ Click the Photos to Explore!</h3></div>
   <main class="main-gallery">
     <div class="container-gallery">
       <div class="card-gallery">
@@ -293,27 +293,8 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 <script src="js/navbar.js"></script>
-<script src="js/carousel.js"></script>
-<script src="js/fadeindown.js"></script>
-<script src="js/fadeinup.js"></script>
-<script src="js/fadeinright.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
-<script src="js/wow.min.js"></script> 
-<script src="js/animsition.min.js"></script> 
-<script src="js/jquery.mobile.min.js"></script> 
-<script src="js/lazysizes.min.js"></script> 
-<!-- <script src="js/gallery2.js"></script>  -->
-<script type="text/javascript" src="js/jquery.matchHeight-min.js"></script> 
-<script src="js/functions.js"></script> 
-<script type="text/javascript">
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-15815880-3']);
-  _gaq.push(['_trackPageview']);
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
-</script>
+
+
+
 </body>
 </html>
