--- a/gallery.html
+++ b/gallery.html
@@ -34,7 +34,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="#home" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
     
             <!-- site menu/nav -->
             <ul>
@@ -120,6 +120,48 @@
         <div class="card-image-gallery">
           <a href="sankalpimg/jan6.jpg" data-fancybox="gallery" data-caption="Janmashtami">
             <img src="sankalpimg/jan6.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/n8.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/n8.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/mwep3.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/mwep3.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/mwep4.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/mwep4.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/mwep5.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/mwep5.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/n9.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/n9.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/n7.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/n7.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
