--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="#home" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
     
             <!-- site menu/nav -->
             <ul>
@@ -283,12 +283,12 @@
       <div class="row">
         <div class="">
           <div class="box66">
-            <div class="icon wow fadeInRightBig"><a class="" href=""> <div class="wrapimg">
-              <div class="pic "> <img src="sankalpimg/neogi2.jpg" class="pic-image full-width" alt="Pic"/>
+            <div class="icon wow fadeInRightBig"><a class="" href=""> <div class="wrapimg xrp">
+              <div class="pic"> <img src="sankalpimg/neogi2.jpg" class="pic-image full-width" alt="Pic"/>
               
               </div></a></div>
             <h4 class="wow " data-wow-duration="0.5s" data-wow-delay="0.5s">Dr. Amit Neogi</h4>
-            <p>Assistant Professor Department of Physics The LNM Institute of Information Technology</p>
+            <p>Assistant Professor Department of Physics</p> <p>The LNM Institute of Information Technology</p>
             <a class="vale" href="mailto:aneogi@lnmiit.ac.in">Contact</a> </div>
           <!-- END box66 --> 
         </div>
