--- a/events.html
+++ b/events.html
@@ -40,7 +40,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="#home" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
     
             <!-- site menu/nav -->
             <ul>
@@ -84,7 +84,7 @@
       <div class="row">
         <div class="colw_6 beta wow column zoomIn">
           <div class="wrapimg hack960">
-            <div class="pic"> <img src="sankalpimg/n6.jpg" class="pic-image full-width" alt="Pic"/>
+            <div class="pic"> <img src="sankalpimg/event.jpg" class="pic-image full-width" alt="Pic"/>
               <div class="pic-caption top-to-bottom">
                 <h4 class="pic-title">SANKALP IS ❤️</h4>
               </div>
@@ -250,9 +250,9 @@
         <img class="card-img-ev" src="sankalpimg/mwep1.jpg">
         <div class="wrapper-image-ev">
             <img src="sankalpimg/mwep1.jpg">
-            <img src="sankalpimg/mwep.jpg">
+            <img src="sankalpimg/mwep4.jpg">
             <img src="sankalpimg/mwep2.jpg">
-            <img src="sankalpimg/mwep1.jpg">
+            <img src="sankalpimg/mwep3.jpg">
         </div>
         <h2>MWEP</h2>
         <p class="show-text-ev">MWEP (Mess Workers Education Program) is an initiative aimed at providing education and skill development opportunities to mess workers in educational institutions. This program is designed to empower mess workers, who are an integral part of the campus community but often marginalized and overlooked.
@@ -298,7 +298,7 @@
         <video
                   controls="controls" class="vid">
                    
-                  <source src="sankalpimg/sankalpvid.mp4"
+                  <source src="sankalpimg/overview.mp4"
                       type="video/mp4">
               </video> 
       </div>
