--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <div class="carousel-content-car">
                 
                 <div class="line-car"></div>
-                <span id="text-car" class="FadeText">
+                <span id="text-car" class="FadeText" style="font-size: 150%;">
                   No one has ever become poor by giving.
                 </span>
                 <span id="text-car2">
