--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
       <article> <img src="sankalpimg/quotebkg.jpg" alt="Web design Istra" data-parallax='{"y": 230}'/>
         <div class="absomid-cbp white7 corner">
           <div class="carousel-car">
-            <div class="carousel-content-car">
+            <div class="carousel-content-car" style="font-size: 150%;">
                 
                 <div class="line-car"></div>
-                <span id="text-car" class="FadeText" style="font-size: 150%;">
+                <span id="text-car" class="FadeText">
                   No one has ever become poor by giving.
                 </span>
                 <span id="text-car2">
