--- a/index.html
+++ b/index.html
@@ -250,13 +250,13 @@
   <!-- END #section-3 -->
   <!-- END #section-3 -->
   
-  <div id="section-4">
+  <div id="section-4" style="font-family: 'Roboto', sans-serif !important;">
     <div class="grid flex">
       <h4 class="title-4">MOTIVATION</h4>
       <article> <img src="sankalpimg/quotebkg.jpg" alt="Web design Istra" data-parallax='{"y": 230}'/>
         <div class="absomid-cbp white7 corner">
           <div class="carousel-car">
-            <div class="carousel-content-car" style="font-size: 150%;">
+            <div class="carousel-content-car">
                 
                 <div class="line-car"></div>
                 <span id="text-car" class="FadeText">
