--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
   <!-- END #section-3 -->
   <!-- END #section-3 -->
   
-  <div id="section-4" style="font-family: 'Roboto', sans-serif !important;">
+  <div id="section-4"  style=" font-family: 'Roboto', sans-serif !important;">
     <div class="grid flex">
       <h4 class="title-4">MOTIVATION</h4>
       <article> <img src="sankalpimg/quotebkg.jpg" alt="Web design Istra" data-parallax='{"y": 230}'/>
@@ -287,7 +287,7 @@
         <div class="">
           <div class="box66">
             <div class="icon wow fadeInRightBig" style="padding-top: 10%;"><a class="" href=""> <div class="wrapimg xrp">
-              <div class="pic"  style="border-radius: 100%;box-shadow:10px 0 200px rgb(204, 95, 7);width: 65%;height: 65%;"> <img src="sankalpimg/neogi2.jpg" class="pic-image full-width" alt="Pic"/>
+              <div class="pic"  style="border-radius: 100%;box-shadow:10px 0 100px rgb(204, 95, 7);width: 90%;height: 90%"> <img src="sankalpimg/neogi.jpg" class="pic-image full-width" alt="Pic"/>
               
               </div></a></div>
             <h4 class="wow " data-wow-duration="0.5s" data-wow-delay="0.5s">Dr. Amit Neogi</h4>
