--- a/gallery.html
+++ b/gallery.html
@@ -43,6 +43,7 @@
               <li><a href="team.html">our team</a></li>
               <li><a class="active" href="gallery.html">gallery</a></li>
               <li><a href="credits.html">credits</a></li>
+              <li><a href="registration.html">Join Our Team</a></li>
             </ul>
     
             <!-- nav-toggler for mobile version only -->
@@ -83,8 +84,8 @@
     <div class="container-gallery">
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/jan1.jpg" data-fancybox="gallery" data-caption="Janmashtami">
-            <img src="sankalpimg/jan1.jpg" alt="Image Gallery">
+          <a href="sankalpimg/JN1.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/JN1.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
@@ -97,22 +98,22 @@
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/jan3.jpg" data-fancybox="gallery" data-caption="Janmashtami">
-            <img src="sankalpimg/jan3.jpg" alt="Image Gallery">
+          <a href="sankalpimg/JN3.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/JN3.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/jan4.jpg" data-fancybox="gallery" data-caption="Janmashtami">
-            <img src="sankalpimg/jan4.jpg" alt="Image Gallery">
+          <a href="sankalpimg/JN4.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/JN4.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/jan5.jpg" data-fancybox="gallery" data-caption="Janmashtami">
-            <img src="sankalpimg/jan5.jpg" alt="Image Gallery">
+          <a href="sankalpimg/JN.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/JN.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
@@ -151,13 +152,7 @@
           </a>
         </div>
       </div>
-      <div class="card-gallery">
-        <div class="card-image-gallery">
-          <a href="sankalpimg/n9.jpg" data-fancybox="gallery" data-caption="Janmashtami">
-            <img src="sankalpimg/n9.jpg" alt="Image Gallery">
-          </a>
-        </div>
-      </div>
+      
       <div class="card-gallery">
         <div class="card-image-gallery">
           <a href="sankalpimg/n7.jpg" data-fancybox="gallery" data-caption="Janmashtami">
@@ -174,8 +169,99 @@
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/Village2.jpeg" data-fancybox="gallery" data-caption="Village Project">
-            <img src="sankalpimg/Village2.jpeg" alt="Image Gallery">
+          <a href="sankalpimg/n9.jpg" data-fancybox="gallery" data-caption="Janmashtami">
+            <img src="sankalpimg/n9.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/Holi.jpg" data-fancybox="gallery" data-caption="Holi">
+            <img src="sankalpimg/Holi.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/Holi1.jpg" data-fancybox="gallery" data-caption="Holi">
+            <img src="sankalpimg/Holi1.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/Trek.jpg" data-fancybox="gallery" data-caption="Trek">
+            <img src="sankalpimg/Trek.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/Trek2.jpg" data-fancybox="gallery" data-caption="Trek">
+            <img src="sankalpimg/Trek2.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/Trek3.jpg" data-fancybox="gallery" data-caption="Trek">
+            <img src="sankalpimg/Trek3.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/SP.jpg" data-fancybox="gallery" data-caption="Saraswati Puja">
+            <img src="sankalpimg/SP.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/SP2.jpg" data-fancybox="gallery" data-caption="Saraswati Puja">
+            <img src="sankalpimg/SP2.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/CD.jpg" data-fancybox="gallery" data-caption="Cloth Distribution">
+            <img src="sankalpimg/CD.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/CD2.jpg" data-fancybox="gallery" data-caption="Cloth Distribution">
+            <img src="sankalpimg/CD2.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/CD3.jpg" data-fancybox="gallery" data-caption="Cloth Distribution">
+            <img src="sankalpimg/CD3.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/CD4.jpg" data-fancybox="gallery" data-caption="Cloth Distribution">
+            <img src="sankalpimg/CD4.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/CD5.jpg" data-fancybox="gallery" data-caption="Cloth Distribution">
+            <img src="sankalpimg/CD5.jpg" alt="Image Gallery">
+          </a>
+        </div>
+      </div>
+      <div class="card-gallery">
+        <div class="card-image-gallery">
+          <a href="sankalpimg/Holi2.jpg" data-fancybox="gallery" data-caption="Holi">
+            <img src="sankalpimg/Holi2.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
@@ -188,22 +274,22 @@
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/Village4.jpeg" data-fancybox="gallery" data-caption="Village Project">
-            <img src="sankalpimg/Village4.jpeg" alt="Image Gallery">
+          <a href="sankalpimg/VP.JPG" data-fancybox="gallery" data-caption="Village Project">
+            <img src="sankalpimg/VP.JPG" alt="Image Gallery">
           </a>
         </div>
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/Village5.jpeg" data-fancybox="gallery" data-caption="Village Project">
-            <img src="sankalpimg/Village5.jpeg" alt="Image Gallery">
+          <a href="sankalpimg/VP2.JPG" data-fancybox="gallery" data-caption="Village Project">
+            <img src="sankalpimg/VP2.JPG" alt="Image Gallery">
           </a>
         </div>
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/Village6.jpeg" data-fancybox="gallery" data-caption="Village Project">
-            <img src="sankalpimg/Village6.jpeg" alt="Image Gallery">
+          <a href="sankalpimg/VP3.JPG" data-fancybox="gallery" data-caption="Village Project">
+            <img src="sankalpimg/VP3.JPG" alt="Image Gallery">
           </a>
         </div>
       </div>
