--- a/events.html
+++ b/events.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EVENTS</title>
 
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="32x32">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="192x192">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="96x96">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="16x16">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="32x32">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="192x192">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="96x96">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="16x16">
 
 
 <link rel="stylesheet" type="text/css" href="css/grid.min.css" />
@@ -40,8 +40,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
-    
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.jpg" class="logo" alt=""></a>    
             <!-- site menu/nav -->
             <ul>
               <li><a href="index.html">home</a></li>
@@ -292,10 +291,10 @@
     <div class="card-ev">
         <img class="card-img-ev" src="sankalpimg/VP.JPG">
         <div class="wrapper-image-ev">
-            <img src="sankalpimg/Village2.jpeg">
-            <img src="sankalpimg/Village1.jpeg">
-            <img src="sankalpimg/Village4.jpeg">
-            <img src="sankalpimg/Village5.jpeg">
+            <img src="sankalpimg/Village2.jpg">
+            <img src="sankalpimg/Village1.jpg">
+            <img src="sankalpimg/Village4.jpg">
+            <img src="sankalpimg/Village5.jpg">
         </div>
         <h2>Village Project</h2>
         <p class="show-text-ev">Every weekend, we visited a village to teach and empower the locals. Through our efforts, we aimed to improve their education and promote self-sufficiency, thereby creating a positive impact in their lives.</p>
@@ -364,7 +363,7 @@
       <div class="wrapper-image-ev">
           <img src="sankalpimg/MWEP6.jpg">
           <img src="sankalpimg/mwep4.jpg">
-          <img src="sankalpimg/mwep8.jpeg">
+          <img src="sankalpimg/mwep8.jpg">
           <img src="sankalpimg/mwep3.jpg">
       </div>
       <h2>MWEP</h2>
