--- a/gallery.html
+++ b/gallery.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gallery</title>
 
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="32x32">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="192x192">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="96x96">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="16x16">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="32x32">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="192x192">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="96x96">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="16x16">
 
 
 <link rel="stylesheet" type="text/css" href="css/grid.min.css" />
@@ -34,7 +34,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.jpg" class="logo" alt=""></a>
     
             <!-- site menu/nav -->
             <ul>
@@ -162,8 +162,8 @@
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/Village1.jpeg" data-fancybox="gallery" data-caption="Village Project">
-            <img src="sankalpimg/Village1.jpeg" alt="Image Gallery">
+          <a href="sankalpimg/Village1.jpg" data-fancybox="gallery" data-caption="Village Project">
+            <img src="sankalpimg/Village1.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
@@ -267,8 +267,8 @@
       </div>
       <div class="card-gallery">
         <div class="card-image-gallery">
-          <a href="sankalpimg/Village3.jpeg" data-fancybox="gallery" data-caption="Village Project">
-            <img src="sankalpimg/Village3.jpeg" alt="Image Gallery">
+          <a href="sankalpimg/Village3.jpg" data-fancybox="gallery" data-caption="Village Project">
+            <img src="sankalpimg/Village3.jpg" alt="Image Gallery">
           </a>
         </div>
       </div>
