--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 
 
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="32x32">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="192x192">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="96x96">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="16x16">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="32x32">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="192x192">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="96x96">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="16x16">
 
 
 <link rel="stylesheet" type="text/css" href="css/grid.min.css" />
@@ -45,7 +45,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.jpg" class="logo" alt=""></a>
     
             <!-- site menu/nav -->
             <ul>
@@ -311,7 +311,7 @@
   <div id="section-4"  style=" font-family: 'Roboto', sans-serif !important;">
     <div class="grid flex">
       
-      <article> <img src="sankalpimg/quotebkg.jpg" alt="" data-parallax='{"y": 230}'/>
+      <article> <img src="sankalpimg/quotebkg.webp" alt="" data-parallax='{"y": 230}'/>
         <h4 class="title-4" style="width: 100%;position: absolute;z-index: 2;color: whitesmoke;text-shadow: -2px 2px 0 #000,2px 2px 0 #000,2px -2px 0 #000,-2px -2px 0 #000;;">MOTIVATION</h4>
         <div class="absomid-cbp white7 corner">
           <div class="carousel-car">
