--- a/registration.html
+++ b/registration.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>EVENTS</title>
 
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="32x32">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="192x192">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="96x96">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="16x16">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="32x32">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="192x192">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="96x96">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="16x16">
 
 
 <link rel="stylesheet" type="text/css" href="css/grid.min.css" />
@@ -40,7 +40,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.jpg" class="logo" alt=""></a>
     
             <!-- site menu/nav -->
             <ul>
@@ -81,7 +81,7 @@
         
       </div>
       <!-- END row -->
-      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd81TZR7OXPwyR6R6ONmydBxaRSW3hOImHUyipn40dAPcRu5w/viewform?embedded=true" width="100%" height="852" frameborder="0" marginheight="0" marginwidth="0" style="background-image: url('sankalpimg/jotbkg.jpg')">Loading…</iframe>
+      <iframe class="xprrr" src="https://docs.google.com/forms/d/e/1FAIpQLSd81TZR7OXPwyR6R6ONmydBxaRSW3hOImHUyipn40dAPcRu5w/viewform?embedded=true" width="100%" height="852" frameborder="0" marginheight="0" marginwidth="0" style="background-image: url('sankalpimg/jotbkg.jpg') !important">Loading…</iframe>
 <footer>
     <div class="container-fluid hero-z">
       <div class="row">
