--- a/credits.html
+++ b/credits.html
@@ -6,10 +6,10 @@
 <title>CREDITS</title>
 
 
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="32x32">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="192x192">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="96x96">
-<link rel="icon" type="image/png" href="sankalpimg/sankalplogo.png" sizes="16x16">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="32x32">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="192x192">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="96x96">
+<link rel="icon" type="image/jpg" href="sankalpimg/sankalplogo.jpg" sizes="16x16">
 
 
 <link rel="stylesheet" type="text/css" href="css/grid.min.css" />
@@ -40,8 +40,7 @@
         <div class="container-nav">
           <nav class="site-navbar">
             <!-- site logo -->
-            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.png" class="logo" alt=""></a>
-    
+            <a href="index.html" class="site-logo"><img src="sankalpimg/sankalplogo.jpg" class="logo" alt=""></a>    
             <!-- site menu/nav -->
             <ul>
               <li><a href="index.html">home</a></li>
